# api/swagger/swagger.yaml
@@ -1098,45 +1098,29 @@ paths:
       description: 创建角色
       operationId: sysRoleInsert
       parameters:
-      - in: body
+      - example: '{"roleName":"财务总监","roleKey":"account","roleSort":1,"status":"2","menuIds":[3,43,44,45,46],"deptIds":[],"sysMenu":[]}'
+        in: body
         name: Body
         schema:
           $ref: '#/definitions/SysRoleInsertReq'
       responses: {}
       tags:
       - 系统角色管理
+  /api/v1/sys/role/{id}:
     put:
       description: 更新角色
       operationId: sysRoleUpdate
       parameters:
+      - format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: Id
       - in: body
         name: Body
         schema:
           $ref: '#/definitions/SysRoleUpdateReq'
-      responses: {}
-      tags:
-      - 系统角色管理
-  /api/v1/sys/role-scope:
-    put:
-      description: 更新角色数据权限
-      operationId: sysRoleUpdateDataScope
-      parameters:
-      - in: body
-        name: Body
-        schema:
-          $ref: '#/definitions/RoleDataScopeReq'
-      responses: {}
-      tags:
-      - 系统角色管理
-  /api/v1/sys/role-status:
-    put:
-      description: 更新角色状态
-      operationId: sysRoleUpdateStatue
-      parameters:
-      - in: body
-        name: Body
-        schema:
-          $ref: '#/definitions/UpdateStatusReq'
       responses: {}
       tags:
       - 系统角色管理
@@ -1150,6 +1134,30 @@ paths:
         required: true
         type: string
         x-go-name: RoleId
+      responses: {}
+      tags:
+      - 系统角色管理
+  /api/v1/sys/role/role-scope:
+    put:
+      description: 更新角色数据权限
+      operationId: sysRoleUpdateDataScope
+      parameters:
+      - in: body
+        name: Body
+        schema:
+          $ref: '#/definitions/RoleDataScopeReq'
+      responses: {}
+      tags:
+      - 系统角色管理
+  /api/v1/sys/role/role-status:
+    put:
+      description: 更新角色状态
+      operationId: sysRoleUpdateStatue
+      parameters:
+      - in: body
+        name: Body
+        schema:
+          $ref: '#/definitions/UpdateStatusReq'
       responses: {}
       tags:
       - 系统角色管理
